[WIN-1482] Wire getBlobAndMetadata in XDI

--- a/source/Makefile
+++ b/source/Makefile
@@ -23,6 +23,7 @@ user_build_dir :=                       \
     access-mgr                          \
     stor-mgr                            \
     tools                               \
+    java				\
     testlib                             \
     checker                             \
     unit-test                           \
