Add command to change Docker container image to use PT

--- a/docker/base_image/Dockerfile
+++ b/docker/base_image/Dockerfile
@@ -10,6 +10,7 @@ MAINTAINER Aaron Nichols <aaron@formationds.com>
 # a long time to rebuild.
 
 RUN locale-gen en_US.UTF-8
+RUN echo "US/Pacific" > /etc/timezone && dpkg-reconfigure --frontend noninteractive tzdata
 
 # If you run into 404's during package installs, update the date here to todays date
 RUN apt-get update #20140926
