added dependencies to fds_deploy playbook

--- a/ansible/playbooks/deploy_fds.yml
+++ b/ansible/playbooks/deploy_fds.yml
@@ -196,6 +196,8 @@
           - libboost-thread1.55.0
           - libboost-regex1.55.0
           - libboost-date-time1.55.0
+          - gcc
+          - python-dev
 
 
 -   name: install and configure fds on all  fds_nodes
