Further clean up platformd, unify libraries, remove extra dependencies in unit-test make files.
Signed-off-by: Donavan Nelson <donavan@formationds.com>

--- a/source/unit-test/Makefile.svc
+++ b/source/unit-test/Makefile.svc
@@ -13,14 +13,13 @@ user_cpp_flags    +=
 user_fds_so_libs  +=
 user_fds_ar_libs  +=  \
     fds-test \
-    fds-plat-daemon \
     fds-am-engine \
     fds-am-plat \
     fds-dsk-io \
     fds-dsk-mgnt \
-    fds-plat-disk \
     fds-hash \
-    fds-xdi
+    fds-xdi \
+    platform_core
 
 local_nginx_libs   :=  \
     ngx-http-module \
