Add sshpass to list of OS packages to install (required to pass ssh passwords to Ansible.)

--- a/ansible/playbooks/devsetup.yml
+++ b/ansible/playbooks/devsetup.yml
@@ -101,6 +101,7 @@
         - libhiredis0.10
         - libhiredis-dev
         - swig3.0
+        - sshpass
 
     - name: install pip packages
       pip: name={{item}} state=present
