added libcryptopp-dev dependency to deploy playbook to get bare_am starting again. also fixed my local fds cluster definiton.

--- a/ansible/playbooks/deploy_fds.yml
+++ b/ansible/playbooks/deploy_fds.yml
@@ -237,6 +237,7 @@
             - "libconfig++9"
             - libev4
             - libreadline5
+            - libcryptopp-dev
             - xfsprogs
             - libjemalloc1
             - redis-tools
