Take apart platform-node-workflow stuff
Signed-off-by: Donavan Nelson <donavan@formationds.com>

--- a/source/platform/source/Makefile
+++ b/source/platform/source/Makefile
@@ -10,7 +10,8 @@ platform_core_src :=                                     \
                      node_platform.cpp                   \
                      node_platform_proc.cpp              \
                      node_shared_memory_rw_ctrl.cpp      \
-                     plat-node-workflow.cpp              \
+                     plat_work_flow.cpp                  \
+                     plat_work_item.cpp                  \
                      disk-capacity.cpp                   \
                      disk-label.cpp                      \
                      disk-partition.cpp                  \
