Improve information in notice to user.
Signed-off-by: Donavan Nelson <donavan@formationds.com>

--- a/source/java/Makefile
+++ b/source/java/Makefile
@@ -48,6 +48,8 @@ endif
 
 else
 	@echo "Previous Build under Jenkins succeeded"
+	@echo "If you don't expect this message, please run find . -name \"jenkins_built_semaphore\""
+	@echo "and remove the file located by find."
 endif
 
 .PHONY: test
