Fix to packaging make file to correctly build fds-pkghelper deb.

--- a/source/tools/install/pkg/Makefile
+++ b/source/tools/install/pkg/Makefile
@@ -22,7 +22,7 @@ package:
 		cd ../../package/fds-pkghelper && fdspkgcreate ; \
 	else \
 		sudo fdspkgcreate -r ; \
-		sudo cd ../../package/fds-pkghelper && fdspkgcreate -r ; \
+		cd ../../package/fds-pkghelper && sudo fdspkgcreate -r ; \
 	fi
 
 # -----------------------------------------------------------------------------
