Breakup net-platform.h into single class header files.
Signed-off-by: Donavan Nelson <donavan@formationds.com>

--- a/source/platform/source/Makefile
+++ b/source/platform/source/Makefile
@@ -20,6 +20,7 @@ platform_core_src :=                                     \
                      disk-inventory.cpp                  \
                      ep-map.cpp                          \
                      net-service.cpp                     \
+                     platform_net_svc.cpp                \
                      net-platform.cpp                    \
                      net-registration.cpp
 
