Python's concurrent.future library added
 * Python's concurrenet.future library added to devsetup.yml
 * the utils.py added to the integration-framework

--- a/ansible/playbooks/devsetup.yml
+++ b/ansible/playbooks/devsetup.yml
@@ -85,6 +85,7 @@
         - nodejs-legacy
         - ruby
         - ruby-sass
+        - python-concurrent.futures
         - python-paramiko
         - python-redis
         - python-requests
