--- a/ansible/playbooks/deploy_fds.yml
+++ b/ansible/playbooks/deploy_fds.yml
@@ -22,6 +22,10 @@
 #   lxc-node-04 fds_node=node04
 #
 #   [lxc-nodes:vars]
+#   ansible_ssh_user=root
+#   ansible_ssh_pass=passwd
+#   cluster_location=bld
+#   deploy_artifact=local
 #   fds_default_nic=eth0
 #   fds_om_host=lxc-node-01
 #   fds_metrics_enabled=false
@@ -34,6 +38,10 @@
 #   be "nodeNN" where NN can be any number. There must also be a node in the
 #   inventory (first stanza) that matches the hostname assigned to the
 #   "fds_om_host" variable.
+#
+#   cluster_location is optional. Determines which FDS-held apt mirror to use for large FDS package downloads. Valid values are bld and fre. Omission causes packages to be downloaded from Artifactory (potentially VERY slow)
+#
+#   deploy_artifact is optional. Determines where the fds-*.deb pacakges should be found. nightly will download latest nightly build from appropriate apt repo. local will attempt to copy locally-built debs to the target hosts. Testing changes and performance will likely benefit most from local 
 #
 #   NOTE: This playbook will NOT populate DNS or hosts files for the nodes
 #   in the inventory - they must exist in the hosts file or be populated in
@@ -76,19 +84,17 @@
 #
 ---
 
--   name: stop_all_nodes
+-   name: DESTRUCTIVE Deployment of FDS
     hosts: all
-    gather_facts: no
-    tags:
-    -   shutdown
+    gather_facts: yes
 
     tasks:
-
-
     -   name: check_fds_install
         shell: test -d /fds/sbin
         ignore_errors: True
         register: fds_installed
+        tags:
+            - shutdown
 
     -   name: stop_platformd
         service: name={{ item }} state=stopped
@@ -98,6 +104,8 @@
             - orchmgr
             - amagent
             - fdsactivate
+        tags:
+            - shutdown
 
     -   name: kill_all_procs
         shell: pkill -9 -f {{item}} || true
@@ -111,42 +119,38 @@
             - StorMgr
             - platformd
             - fdscli
+        tags:
+            - shutdown
 
     -   name: stop_redis
         shell: ./redis.sh stop chdir=/fds/sbin
         ignore_errors: True
         when: fds_installed|success
-
--   name: clean_shm
-    hosts: all
-    tags:
-       -   clean
-       -   cleanshm
-
-    tasks:
+        tags:
+            - shutdown
 
     -   name: check_fds_install
         shell: test -d /fds/sbin
         ignore_errors: True
         register: fds_installed
+        tags:
+           - clean
+           - cleanshm
 
     -   name: clean_node
         shell: rm -rf {{item}}
         with_items:
             - /dev/shm/0x*
-
--   name: clean_all_nodes
-    hosts: all
-    tags:
-       -   clean
-    gather_facts: no
-
-    tasks:
+        tags:
+           - clean
+           - cleanshm
 
     -   name: check_fds_install
         shell: test -d /fds/sbin
         ignore_errors: True
         register: fds_installed
+        tags:
+           - clean
 
     -   name: clean_node
         shell: rm -rf {{item}}
@@ -161,18 +165,14 @@
             - /fds/dev/ssd-*/*
             - /fds/sys-repo
             - /fds/user-repo
+        tags:
+           - clean
 
     -   name: clean_redis
         shell: ./redis.sh clean chdir=/fds/sbin
         when: fds_installed|success
-
--   name: configure_os_reqs
-    hosts: all
-    tags:
-      -   deploy
-    gather_facts: yes
-
-    tasks:
+        tags:
+           - clean
 
     -   name: sysctl_params
         sysctl: name={{ item.key }} value={{ item.value }} state={{ item.state }}
@@ -182,7 +182,8 @@
           - { key: 'kernel.core_uses_pid', value: '1', state: 'present' }
           - { key: 'fs.suid_dumpable', value: '1', state: 'present' }
           - { key: 'kernel.core_pattern', value: '/corefiles/%e.%p.%u.%t.core', state: 'present' }
-        tags: sysctl
+        tags:
+          - deploy
 
     -   name: install_limits_conf
         template:
@@ -191,6 +192,8 @@
             owner=root
             group=root
             mode=0644
+        tags:
+          - deploy
 
     -   name: ensure_corefiles_exists
         file:
@@ -199,6 +202,8 @@
             group=root
             mode=0755
             state=directory
+        tags:
+          - deploy
 
     -   name: ensure_os_packages_installed
         apt: name={{item}} state=present update_cache=yes
@@ -218,16 +223,22 @@
           - gcc
           - python-dev
           - python-pycurl
+        tags:
+          - deploy
 
     -   name: add artifactory repo key
         apt_key: url="http://builder:h7qgA3fYr0P3@artifacts.artifactoryonline.com/artifacts/api/gpg/key/public"
-        tags: repo
+        tags:
+          - deploy
+          - repo
 
     -   name: add artifactory repo for third party packages
         apt_repository: repo="deb http://builder:h7qgA3fYr0P3@artifacts.artifactoryonline.com/artifacts/third-party-deps/ fds main"
             state=present
             update_cache=yes
-        tags: repo
+        tags:
+          - deploy
+          - repo
 
     -   name: install third party deps from artifactory repo
         apt: name={{item}}
@@ -254,7 +265,9 @@
             - python-distlib
             - python-html5lib
             - python-pip
-        tags: repo
+        tags:
+          - deploy
+          - repo
 
     -   name: install needed pip modules
         pip: name={{item.name}} version={{item.version}} extra_args='-I'
@@ -262,16 +275,9 @@
             - { name: 'paramiko', version: '1.15.1' }
             - { name: 'scp', version: '0.8.0' }
             - { name: 'boto', version: '2.34.0' }
+        tags:
+          - deploy
 
--   name: install and configure fds on all  fds_nodes
-    hosts: all
-    tags:
-      -   deploy
-    gather_facts: yes
-    vars:
-      force_install: no
-
-    tasks:
     -   name: uninstall fds
         apt: name={{item}}
             state=absent
@@ -280,14 +286,29 @@
           - fds-platform
           - fds-pkghelper
           - fds-coredump
-        tags: uninstall
+        tags:
+          - deploy
+          - uninstall
 
-    -   name: add fds nightly platform repo
-        when: deploy_artifact == "nightly"
+    -   name: remove Artifactory repo in favor of local mirror
+        file: path=/etc/apt/sources.list.d/artifacts_artifactoryonline_com_artifacts_third_party_deps.list
+            state=absent
+
+    -   name: add LOCAL fds nightly platform repo
+        when: deploy_artifact == "nightly" and cluster_location is defined
+        apt_repository: repo="deb http://{{cluster_location}}-apt.formationds.com/formation-apt platform nightly"
+            state=present
+            update_cache=yes
+        tags:
+          - deploy
+
+    -   name: add Artifactory fds nightly platform repo
+        when: deploy_artifact == "nightly" and cluster_location is not defined
         apt_repository: repo="deb http://builder:h7qgA3fYr0P3@artifacts.artifactoryonline.com/artifacts/formation-apt/ platform nightly"
             state=present
             update_cache=yes
-        tags: repo
+        tags:
+          - deploy
 
     -   name: install fds platform from repo
         when: deploy_artifact == "nightly"
@@ -301,7 +322,8 @@
             - fds-pkghelper
             - fds-coredump
         register: fdsinstall_pkg
-        tags: repo
+        tags:
+          - deploy
 
     -   name: copy local fds-coredump to host
         when: deploy_artifact == "local"
@@ -310,7 +332,7 @@
         with_fileglob:
           - '../../source/tools/install/pkg/fds-coredump*.deb'
         tags:
-          - copy_pkg
+          - deploy
 
     -   name: copy local fds-pkghelper to host
         when: deploy_artifact == "local"
@@ -319,7 +341,7 @@
         with_fileglob:
           - '../../source/tools/package/fds-pkghelper/fds-pkghelper*.deb'
         tags:
-          - copy_pkg
+          - deploy
 
     -   name: copy local fds-platform to host
         when: deploy_artifact == "local"
@@ -328,7 +350,7 @@
         with_fileglob:
           - '../../source/tools/install/pkg/fds-platform*.deb'
         tags:
-          - copy_pkg
+          - deploy
 
     -   name: install fds platfrom from local debs
         when: deploy_artifact == "local"
@@ -338,7 +360,7 @@
           - /root/fds-pkghelper.deb
           - /root/fds-platform.deb
         tags:
-          - copy_pkg
+          - deploy
 
     -   name: delete local debs from /root/ to avoid conflicts
         when: deploy_artifact == "local"
@@ -346,15 +368,21 @@
             state=absent
         with_fileglob:
           - 'fds-*.deb'
+        tags:
+          - deploy
 
     -   name: copy fdsinstall.py to /root/fdsinstally.py
         copy: src=../../source/tools/install/fdsinstall.py
             dest=/root/fdsinstall.py
             mode=0755
+        tags:
+          - deploy
 
     -   name: run fdsinstall step 3 - setup storage
         shell: ./fdsinstall.py -o 5 -o 3  chdir=/root
         when: fdsinstall_pkg.changed or force_install == "yes"
+        tags:
+          - deploy
 
     -   name: render formation.conf
         template:
@@ -364,11 +392,10 @@
             group=root
             mode=0644
         tags:
-          -   fdsconfig
+          - deploy
+          - fdsconfig
 
     -   name: render /fds/etc config files
-        tags:
-          -   fdsconfig
         template:
             src=../../source/config/etc/{{item}}.conf.j2
             dest=/fds/etc/{{item}}.conf
@@ -381,11 +408,11 @@
             - platform
             - orch_mgr
             - redis
+        tags:
+          - deploy
+          - fdsconfig
 
     -   name: render_init_scripts
-        tags:
-          -   init
-          -   fdsconfig
         template:
             src=../templates/{{item}}-init.conf.j2
             dest=/etc/init/{{item}}.conf
@@ -397,6 +424,10 @@
             - orchmgr
             - amagent
             - fdsactivate
+        tags:
+          - deploy
+          - init
+          - fdsconfig
 
     -   name: java_symlink
         file:
@@ -405,85 +436,64 @@
             owner=root
             group=root
             state=link
+        tags:
+          - deploy
 
--   name: run_disk_type
-    hosts: all
-    tags:
-      - startup
-    gather_facts: no
-
-    tasks:
     -   name: disk_type
         shell: python -m disk_type -m
+        tags:
+          - startup
 
--   name: start_redis
-    hosts: all
-    tags:
-      - startup
-    gather_facts: no
-
-    tasks:
     -   name: start_redis
         shell: ./redis.sh start chdir=/fds/sbin
+        tags:
+          - startup
 
--   name: start_platformd
-    hosts: all
-    tags:
-      - startup
-    gather_facts: no
-
-    tasks:
     -   name: start_platformd
         service: name=platformd state=started
+        tags:
+          - startup
 
--   name: start_om
-    hosts: all
-    tags:
-      - startup
-    gather_facts: no
-
-    tasks:
     -   name: start_om
         service: name=orchmgr state=started
         when: fds_om_host is defined and fds_om_host == inventory_hostname
+        tags:
+          - startup
 
     -   name: om_wait
         shell: sleep 8
         when: fds_om_host is defined and fds_om_host == inventory_hostname
+        tags:
+          - startup
 
--   name: enable_sm_dm
-    hosts: all
-    tags:
-      - startup
-    gather_facts: no
-
-    tasks:
     -   name: fdsactivate
         service: name=fdsactivate state=started
         when: fds_om_host is defined and fds_om_host == inventory_hostname
+        tags:
+          - startup
 
     -   name: fdsactivate_wait
         shell: sleep 8
         when: fds_om_host is defined and fds_om_host == inventory_hostname
+        tags:
+          - startup
 
--   name: start_am
-    hosts: all
-    tags:
-      -   startup
-    gather_facts: no
-
-    tasks:
     -   name: start_am
         service: name=amagent state=started
         when: fds_om_host is defined and fds_om_host == inventory_hostname
+        tags:
+          - startup
 
     -   name: check process status
         command: ./fdsadmin -f deploy_formation.conf --process-status
             chdir=/fds/sbin
         register: fdsadmin_output
-        tags:
-            -   dbg
         when: fds_om_host is defined and fds_om_host == inventory_hostname
+        tags:
+            - startup
+            - status
+
     -   debug: var=fdsadmin_output.stdout_lines
         tags:
-            -   dbg
+            - startup
+            - status
