broke out tasks for adding fds-platform-wielding repos / local deb installs

--- a/ansible/playbooks/deploy_fds.yml
+++ b/ansible/playbooks/deploy_fds.yml
@@ -290,86 +290,11 @@
           - deploy
           - uninstall
 
-    -   name: remove Artifactory repo in favor of local mirror
-        file: path=/etc/apt/sources.list.d/artifacts_artifactoryonline_com_artifacts_third_party_deps.list
-            state=absent
+    -   include: ../tasks/add_fds_repos.yml
+        when: deploy_artifact is defined and deploy_artifact != "local"
 
-    -   name: add LOCAL fds nightly platform repo
-        when: deploy_artifact == "nightly" and cluster_location is defined
-        apt_repository: repo="deb http://{{cluster_location}}-apt.formationds.com/formation-apt platform nightly"
-            state=present
-            update_cache=yes
-        tags:
-          - deploy
-
-    -   name: add Artifactory fds nightly platform repo
-        when: deploy_artifact == "nightly" and cluster_location is not defined
-        apt_repository: repo="deb http://builder:h7qgA3fYr0P3@artifacts.artifactoryonline.com/artifacts/formation-apt/ platform nightly"
-            state=present
-            update_cache=yes
-        tags:
-          - deploy
-
-    -   name: install fds platform from repo
-        when: deploy_artifact == "nightly"
-        apt: name={{item}}
-            force=yes
-            state=present
-            update_cache=yes
-            default_release=platform
-        with_items:
-            - fds-platform
-            - fds-pkghelper
-            - fds-coredump
-        register: fdsinstall_pkg
-        tags:
-          - deploy
-
-    -   name: copy local fds-coredump to host
-        when: deploy_artifact == "local"
-        copy: src={{ item }}
-          dest=/root/fds-coredump.deb
-        with_fileglob:
-          - '../../source/tools/install/pkg/fds-coredump*.deb'
-        tags:
-          - deploy
-
-    -   name: copy local fds-pkghelper to host
-        when: deploy_artifact == "local"
-        copy: src={{ item }}
-          dest=/root/fds-pkghelper.deb
-        with_fileglob:
-          - '../../source/tools/package/fds-pkghelper/fds-pkghelper*.deb'
-        tags:
-          - deploy
-
-    -   name: copy local fds-platform to host
-        when: deploy_artifact == "local"
-        copy: src={{ item }}
-          dest=/root/fds-platform.deb
-        with_fileglob:
-          - '../../source/tools/install/pkg/fds-platform*.deb'
-        tags:
-          - deploy
-
-    -   name: install fds platfrom from local debs
-        when: deploy_artifact == "local"
-        apt: deb={{ item }}
-        with_items:
-          - /root/fds-coredump.deb
-          - /root/fds-pkghelper.deb
-          - /root/fds-platform.deb
-        tags:
-          - deploy
-
-    -   name: delete local debs from /root/ to avoid conflicts
-        when: deploy_artifact == "local"
-        file: path=/root/{{ item }}
-            state=absent
-        with_fileglob:
-          - 'fds-*.deb'
-        tags:
-          - deploy
+    -   include: ../tasks/deploy_local_fds_packages.yml
+        when: deploy_artifact is defined and deploy_artifact == "local"
 
     -   name: copy fdsinstall.py to /root/fdsinstally.py
         copy: src=../../source/tools/install/fdsinstall.py
