ListBlobsByPattern working through dm_direct.

--- a/source/data-mgr/Makefile
+++ b/source/data-mgr/Makefile
@@ -17,7 +17,9 @@ user_fds_ar_libs  := \
 
 user_non_fds_libs := \
     leveldb \
-    ssl crypto
+    ssl \
+    crypto \
+    pcrecpp
 
 user_cpp          := dm-main.cpp
 user_bin_exe      := DataMgr
