added cluster_location to nightly nodes. switch to local apt mirror for third party deps installed from Artifactory. disable PAM in ssh configs for nightly LXC nodes, slows down everything

--- a/ansible/playbooks/pre_deploy_setup.yml
+++ b/ansible/playbooks/pre_deploy_setup.yml
@@ -21,12 +21,22 @@
         action: user name=root
             password=$1$M7e8qbJh$0nDQnqfGh5Ce80bbYKp5U/
 
+    -   name: disable ssh with PAM, bogs things down
+        lineinfile: dest=/etc/ssh/sshd_config
+            regexp="UsePAM yes"
+            line="UsePAM no"
+            backrefs=yes
+            state=present
+        notify: restart ssh
+
+
     -   name: allow ssh root login
         lineinfile: dest=/etc/ssh/sshd_config
             regexp="PermitRootLogin without-password"
             line="PermitRootLogin yes"
             backrefs=yes
             state=present
+        notify: restart ssh
 
     -   name: allow ssh root login... again
         lineinfile: dest=/etc/ssh/sshd_config 
