--- a/ansible/playbooks/deploy_fds.yml
+++ b/ansible/playbooks/deploy_fds.yml
@@ -232,8 +232,8 @@
           - deploy
           - repo
 
-    -   name: add artifactory repo for third party packages
-        apt_repository: repo="deb http://builder:h7qgA3fYr0P3@artifacts.artifactoryonline.com/artifacts/third-party-deps/ fds main"
+    -   name: add LOCAL mirror for third party packages
+        apt_repository: repo="deb http://{{cluster_location}}-apt.formationds.com/third-party-deps/ fds main"
             state=present
             update_cache=yes
         tags:
