support for timeline db via sqlite

--- a/source/data-mgr/Makefile
+++ b/source/data-mgr/Makefile
@@ -20,7 +20,8 @@ user_non_fds_libs := \
     leveldb \
     ssl \
     crypto \
-    pcrecpp
+    pcrecpp \
+    sqlite3
 
 user_cpp          := dm-main.cpp
 user_bin_exe      := DataMgr
