--- a/ansible/playbooks/deploy_fds.yml
+++ b/ansible/playbooks/deploy_fds.yml
@@ -84,9 +84,37 @@
 #
 ---
 
+-   name: Pre-Deploy - check sudo privileges
+    hosts: all
+    gather_facts: no
+    sudo: no
+    tags:
+        - check_sudo
+
+    tasks:
+    -   include: ../tasks/check_sudo.yml
+        when: ansible_sudo_pass is not defined
+
+-   name: Pre-Deploy - setup environment
+    hosts: all
+    gather_facts: no
+    sudo: yes
+    tags:
+        - pre_deploy
+
+    handlers:
+    -   name: restart ssh
+        service: name=ssh
+            state=restarted
+
+    tasks:
+    -   include: ../tasks/pre_deploy_setup.yml
+
+
 -   name: DESTRUCTIVE Deployment of FDS
     hosts: all
     gather_facts: yes
+    sudo: yes
 
     tasks:
     -   name: check_fds_install
