Clean up a number of commented out header files,
Plus rename and clean up node_inventory.cpp header files.

Signed-off-by: Donavan Nelson <donavan@formationds.com>

--- a/source/platform/source/Makefile
+++ b/source/platform/source/Makefile
@@ -30,7 +30,7 @@ fds_plat_lib_cpp :=                              \
                     platform-rpc.cpp             \
                     platform-libmod.cpp          \
                     disk_inventory.cpp           \
-                    node-inventory.cpp           \
+                    node_inventory.cpp           \
                     domain_container.cpp         \
                     agent_container.cpp          \
                     node-inv-shmem.cpp           \
