--- a/ansible/tasks/pre_deploy_setup.yml
+++ b/ansible/tasks/pre_deploy_setup.yml
@@ -3,6 +3,7 @@
     raw: apt-get -y install python
     register: python_install_results
     changed_when: "'python is already the newest version' not in python_install_results.stdout"
+    when: need_to_install_python is defined
     tags:
         - setup
         - pythoninstall
