--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -1,4 +1,4 @@
 [defaults]
 host_key_checking=False
 scp_if_ssh = True
-ssh_args = -t -o UserKnownHostsFile=/dev/null
+ssh_args = -o UserKnownHostsFile=/dev/null -t
