--- a/ansible/playbooks/deploy_fds.yml
+++ b/ansible/playbooks/deploy_fds.yml
@@ -118,7 +118,7 @@
 
     tasks:
     -   name: check_fds_install
-        shell: test -d /fds/sbin
+        shell: dpkg -l fds-platform
         ignore_errors: True
         register: fds_installed
         tags:
@@ -157,14 +157,6 @@
         tags:
             - shutdown
 
-    -   name: check_fds_install
-        shell: test -d /fds/sbin
-        ignore_errors: True
-        register: fds_installed
-        tags:
-           - clean
-           - cleanshm
-
     -   name: clean_node
         shell: rm -rf {{item}}
         with_items:
@@ -172,13 +164,6 @@
         tags:
            - clean
            - cleanshm
-
-    -   name: check_fds_install
-        shell: test -d /fds/sbin
-        ignore_errors: True
-        register: fds_installed
-        tags:
-           - clean
 
     -   name: clean_node
         shell: rm -rf {{item}}
