use fdsadmin --monitor --quiet instead of --process-status so that we actually get a failure code when something fails to start

--- a/ansible/playbooks/deploy_fds.yml
+++ b/ansible/playbooks/deploy_fds.yml
@@ -461,7 +461,7 @@
           - startup
 
     -   name: check process status
-        command: ./fdsadmin -f deploy_formation.conf --process-status
+        command: ./fdsadmin -f deploy_formation.conf --monitor --quiet
             chdir=/fds/sbin
         register: fdsadmin_output
         when: fds_om_host is defined and fds_om_host == inventory_hostname
